# Self-Improving-Trading

./: .env.example  .gitignore  Dockerfile  README.md  _crypto_logs.txt  _gp_debug_discover.py  _gp_revalidate_s10.b64  _gp_revalidate_s10.py  _invent_test_out.txt  _phase0_baseline.py  _phase0_baseline.txt  _pulse_analysis.py  _pulse_analysis_out.txt  entrypoint.py  pyproject.toml  railway.json  structure.txt
bots/: _runner.py
cron/: gp_cron.py  heartbeat.py
docs/: BB_BW_MEASUREMENT.md  CHANGELOG.md  COMPONENT_REGISTRY.md  HERMES_MASTER_BLUEPRINT_v4.md  HERMES_REBUILD_EXECUTION_ROADMAP_v4.md  README.md  SOAK_REDEPLOY_CHECKLIST.md  generated_sections.md  orientation.md  plan_price_aggregator.md
hermes_core/: __init__.py  env.py  models.py
tests/: conftest.py  test_aggregate.py  test_archive_isolation.py  test_backtest.py  test_backtest_gp.py  test_book_risk.py  test_chart_vision.py  test_clean_hypotheses.py  test_clean_trades.py  test_config.py  test_cortex.py  test_crisis.py  test_dashboard_api.py  test_dashboard_realtime.py  test_discord_budget.py  test_entry.py  test_entry_ranking.py  test_excursion.py  test_exit.py  test_exit_intel.py  test_exit_logging.py  test_frontend.py  test_genetic.py  test_gp_discovered_path.py  test_gp_entry.py  test_gp_intel.py  test_gp_invent_profile.py  test_gp_phase_a.py  test_gp_phase_b.py  test_gp_promote_gate.py  test_guards.py  test_http_price.py  test_indicators.py  test_indicators_properties.py  test_integration_e2e.py  test_kelly_sizing.py  test_loop.py  test_mom_range_guard.py  test_no_duplication.py  test_price_adapter.py  (+15 more)
tools/: clean_hypotheses.py  clean_trades.py  live_verify.py  regenerate_blueprint_sections.py  smoke_dashboard.py  state_hygiene.py  verify_contracts.py  verify_env_example.py  (+3 more)
(+171 files in other folders)
