[project]
name = "hermes-trading"
version = "0.0.0"
description = "HERMES paper-trading rebuild — shared engine, config-driven bots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=1.5.1",
    "httpx>=0.28.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pip-audit>=2.7.0",
    "mutmut>=3.0.0",
    "hypothesis>=6.120.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mutmut]
paths_to_mutate = [
    "hermes_core/indicators/",
    "hermes_core/engines/risk.py",
    "hermes_core/engines/exit.py",
]
backup = false
runner = "python -m pytest -x -q"
